Make small edits

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -72,8 +72,8 @@
 
 @media screen and (max-width: 464px){
     .about__img{
-        height: 60vh;
-        width: 80%;
+        height: 50vh;
+        width: auto;
         
     }
    
