--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -237,11 +237,11 @@ a {
         margin: 1em;
     }
     .frontpage__cardsButtonContainer {
-        align-content: center;
-        margin: 1em;
+        align-content: left;
+        margin: .7em;
     }
     .cards__button {
-        margin: auto;
+        margin: auto .5em;
 
 
     }
