--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -5,7 +5,8 @@
     display: flex;
 }
 
-.hero__textContainer {
+.hero__textContainer,
+.hero__textContainerLast {
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
@@ -145,17 +146,16 @@
 
     }
 
-    .ryanair__img{
+    .ryanair__img {
         display: none;
     }
+
     .hero__textLast {
-       
-    
-      
         padding: 0.5em;
         line-height: 1.7;
         margin: 0 2em;
     }
+
     .hero__buttonLast {
         padding: .6em;
         font-weight: 500;
@@ -165,49 +165,68 @@
         border-style: none;
         color: var(--accent-color-light);
         text-align: center;
-    
+
         width: fit-content;
         margin: 0 2.4em;
     }
-  
+
 }
-@media screen and (max-width: 464px){
-    .frontpage__heroContainer{
+
+@media screen and (max-width: 464px) {
+    .frontpage__heroContainer {
         display: flex;
         flex-direction: column;
-    
+        align-items: center;
+        justify-content: center;
+
     }
-    .frontpage__heroTitle{
+
+    .hero__textContainer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .frontpage__heroTitle {
         width: fit-content;
     }
 
     .hero__textLast {
-        margin: .5em .5em;
+        margin: .5em .7em;
     }
-    
+
     .frontpage__heroTitleLast {
-       
-    
+
+        display: flex;
         width: fit-content;
         height: fit-content;
         padding: .5em;
         letter-spacing: .3em;
-        margin: .5em;
+        margin: .7em;
     }
-    .hero__textContainer{
-        display: flex;
+
+    .hero__textContainerLast {
+
         flex-wrap: wrap;
 
         flex-direction: column;
-     
-        align-items: center;
+        align-items: left;
     }
+
     .frontpage__heroTitleLast--size {
-  
+        margin: .7em;
         letter-spacing: .1em;
     }
-    .frontpage__ryanairSub{
-        margin: .5em;
+
+    .frontpage__ryanairSub {
+        margin: .7em;
+    }
+    .hero__buttonLast {
+        padding: .6em;
+        
+        margin: 0 .8em;
     }
 
 }
