--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -60,6 +60,7 @@
         width: 100%;
         height: max-content;
         padding: .5em;
+      
     }
 
     .news__title{
@@ -68,6 +69,9 @@
         letter-spacing: .1em;
     }
     .news__button{
-       margin: 0 25%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
     }
 }
