--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -2,6 +2,7 @@
     width: 700px;
     height: 320px;
     margin: 1em 1em 1em 1.5em;
+    
 
 }
 
@@ -19,7 +20,7 @@
 .carousel__image {
     width: 100%;
     height: 320px;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .carousel__track-container {
