--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -3,12 +3,12 @@
     margin: 0;
     box-sizing: border-box;
     color: black;
-   
+
 }
 
 body {
     overflow-x: hidden;
-   
+
 
 }
 
@@ -58,7 +58,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-padding-right: 2em;
+    padding-right: 2em;
     width: 30px;
     text-align: right;
     justify-content: flex-end;
@@ -105,6 +105,10 @@ padding-right: 2em;
     display: flex;
 }
 
+.material-symbols-outlined {
+    color: var(--accent-color-light)
+}
+
 
 @media screen and (max-width: 1070px) {
 
@@ -139,7 +143,7 @@ padding-right: 2em;
         height: fit-content;
         width: 60%;
         transform: translateX(100%);
-        transition: transform 300ms cubic-bezier(.69, .1, 0, 1.84);
+        transition: 300ms cubic-bezier(0.69, 0.1, 0.59, 1.07);
     }
 
     .burgerMenuButton {
@@ -177,6 +181,7 @@ padding-right: 2em;
         font-size: large;
         margin: 0 1em;
         letter-spacing: .2em;
+        color: var(--accent-color-light);
     }
 
     .burgerNav__menuItem-right:first-of-type {
@@ -200,7 +205,7 @@ padding-right: 2em;
 
         margin: .1em;
         text-align: right;
-    align-items: center;
+        align-items: center;
 
     }
 
@@ -211,7 +216,7 @@ padding-right: 2em;
         margin: 0;
         display: flex;
         flex-wrap: wrap;
-        
+
     }
 
     .siteHeader__subtext {
@@ -240,6 +245,6 @@ padding-right: 2em;
 
     .burgerNav {
         width: 90%;
-      
+
     }
 }
